--- a/src/android/build-extras.gradle
+++ b/src/android/build-extras.gradle
@@ -6,6 +6,9 @@ android {
         pickFirst 'app/src/main/jniLibs/x86_64/libhelloc.so'
     }
     defaultConfig {
+        ndk {
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+        }
         externalNativeBuild {
             ndkBuild {
                 arguments "-j4"
