--- a/plugin.xml
+++ b/plugin.xml
@@ -19,7 +19,7 @@
 
   <platform name="android">
 
-    <config-file target="app/src/main/res/xml/config.xml" parent="/*">
+    <config-file parent="/*" target="res/xml/config.xml">
       <feature name="HelloCPlugin">
         <param name="android-package" value="com.example.HelloCPlugin"/>
       </feature>
