--- a/src/android/build-extras.gradle
+++ b/src/android/build-extras.gradle
@@ -1,4 +1,5 @@
 android {
+    ndkVersion "22.1.7171670"
     packagingOptions {
         pickFirst 'app/src/main/jniLibs/arm64-v8a/libhelloc.so'
         pickFirst 'app/src/main/jniLibs/armeabi-v7a/libhelloc.so'
