--- a/plugin.xml
+++ b/plugin.xml
@@ -66,7 +66,81 @@
     <source-file src="src/common/hello.h" target-dir="app/src/main/java/c/common/"/>
     <source-file src="src/common/hello.c" target-dir="app/src/main/java/c/common/"/>
 
-    <source-file src="src/common/openssl" target-dir="app/src/main/java/c/common"/>
+    <source-file src="src/common/openssl/aead.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/aes.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/arm_arch.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/asn1_mac.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/asn1.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/asn1t.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/base.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/base64.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/bio.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/blowfish.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/bn.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/buf.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/buffer.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/bytestring.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/cast.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/chacha.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/cipher.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/cmac.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/conf.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/cpu.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/crypto.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/curve25519.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/des.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/dh.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/digest.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/dsa.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/dtls1.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/e_os2.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/ec_key.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/ec.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/ecdh.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/ecdsa.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/engine.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/err.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/evp.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/ex_data.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/hkdf.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/hmac.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/hrss.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/is_boringssl.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/lhash.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/md4.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/md5.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/mem.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/nid.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/obj_mac.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/obj.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/objects.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/opensslconf.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/opensslv.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/ossl_typ.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/pem.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/pkcs7.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/pkcs8.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/pkcs12.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/poly1305.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/pool.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/rand.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/rc4.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/ripemd.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/rsa.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/safestack.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/sha.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/siphash.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/span.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/srtp.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/ssl.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/ssl3.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/stack.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/thread.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/tls1.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/type_check.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/x509_vfy.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/x509.h" target-dir="app/src/main/java/c/common/openssl"/>
+    <source-file src="src/common/openssl/x509v3.h" target-dir="app/src/main/java/c/common/openssl"/>
 
     <source-file src="src/common/mylib/mylib.h" target-dir="app/src/main/java/c/common/mylib"/>
     <source-file src="src/common/mylib/mylib.c" target-dir="app/src/main/java/c/common/mylib"/>
